2008-02-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml: Assembly browser can now be used to open
	  referenced assemblies.

2008-02-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/ITreeNavigator.cs,
	  MonoDevelop.Ide.Dom.Output/OutputFlags.cs,
	  MonoDevelop.Ide.Dom.Output/Ambience.cs,
	  MonoDevelop.Ide.Dom.Output/NetAmbience.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs,
	  gtk-gui/gui.stetic, MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Worked
	  on assembly browser.

2008-02-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom.Output/OutputFlags.cs,
	  MonoDevelop.Ide.Dom.Output/Ambience.cs,
	  MonoDevelop.Ide.Dom.Output/AmbienceService.cs,
	  MonoDevelop.Ide.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Ide.Dom/DomType.cs, MonoDevelop.Ide.Dom/ClassType.cs,
	  MonoDevelop.Ide.Dom/Modifiers.cs, MonoDevelop.Ide.Dom/IType.cs: Worked
	  on Dom output.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Changed some accessibilities
	  to internal.

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectSolutionPad.cs,
	  MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs,
	  MonoDevelop.Ide.Gui.Pads/NodeCommandHandler.cs,
	  MonoDevelop.Ide.Gui.Pads/ITreeBuilderContext.cs,
	  MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui.Pads/SolutionPad.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs,
	  MonoDevelop.Ide.Codons/SolutionPadCodon.cs: Splitted TreeViewPad into
	  pad and widget. (I needed the widget elsewhere too.)

2008-02-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/DisplayBindingService.cs: Fixed bug in display binding
	  service.

2008-02-05  Michael Hutchinson <mhutchinson@novell.com> 
