@@ -1,5 +1,11 @@
 2008-02-07  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Ide.Dom.Output/OutputFlags.cs,
+	  MonoDevelop.Ide.Dom.Output/Ambience.cs,
+	  MonoDevelop.Ide.Dom.Output/NetAmbience.cs: Worked on Dom output.
+
+2008-02-07  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceFolderNodeBuilder.cs,
 	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs,
 	  MonoDevelop.Ide.addin.xml: Assembly browser can now be used to open
